<resources>
    <string name="app_name">andreas</string>
    <string name="title_activity_main_int">DaGame</string>
    <string name="coordinates">No coordinates to display :(</string>
    <string name="main_menu">menu</string>
    <string name="emptyMenu">no information to display</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="action_settings">settings</string>
    <string name="label_activity_gameMode">gameMode</string>
    <string name="data">data</string>
    <string name="minigame">minigame</string>
    <string name="points_text">Points:</string>
    <string name="points_score">0</string>
    <string name="zoombutton_text">Zoom to me!</string>
    <string name="targetbutton_text">Find Target</string>
    <string name="login_text">Username</string>
    <string name="password_text">Password</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="label_login">Login</string>
    <string name="register_click_text">Register here!</string>
    <string name="title_activity_register">Register</string>
    <string name="email_text">Email</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="start">Start the game!</string>
    <string name="gyroscope">  </string>
    <string name="acceleration">  </string>
    <string name="light">  </string>
    <string name="explain">Try to have an acceleration of 2.0 m/s² as well as a light intensity of 1000.0 lx and a rotation vector of 3.0 rad/s to win 100 points. </string>
    <string name="information">Press the button to start</string>
    <string name="timer"> </string>
    <string name="explanation">Try to have an acceleration of 4.0 m/s² while on your bike. You win 50 points if you succeed. </string>
    <string name="startbutton">Start the game</string>
    <string name="started">Something has changed</string>
    <string name="exp_magnetic">Try to find a magnetic field with a magnitude of 1.0 mT (= 1000.0 µT). If you do so, you will get 100 points. </string>
    <string name="song_expl">Try to find or create a very loud noise. If it is loud enough, you will get 50 points!</string>
    <string name="combination_two">Try to find a magnetic field of 1.0 mT as well as a light intensity of 1000.0 lx!</string>
    <string name="powerUpOffensive">Offensive</string>
    <string name="powerUpOffensiveUpdateFrequency">Increase update frquency</string>
    <string name="powerUpOffensiveEasyKill">Easy kill move</string>
    <string name="powerUpDefensiveStopSignal">Signal stop Moving</string>
    <string name="powerUpDefensivePictures">Only pictures</string>
    <string name="powerUpDefensiveTitle">Defensive</string>
    <string name="powerUpDefensiveSound">Only Sound</string>
    <string name="powerUpDefensivePursuer">Circle around pursuer</string>
    <string name="powerUpDefensiveUpdateFrequency">Slow update frequency</string>
    <string name="powerUpDefensiveHardKill">Hard kill move</string>
    <string name="label_shop">Shop</string>
    <string name="buy_text">Buy</string>
    <string name="login_button_text">Login</string>
    <string name="HowToPowerUps">Power Ups</string>
    <string name="HowToIncreaseUpdateFrequency">Increase update frequency</string>
    <string name="HowToOffensiveUpdateFrequency">powerUpOffensiveUpdateFrequency</string>
    <string name="HowToOffensiveUpdateFrequencyText">Dit versnelt de hoeveelheid updates per
        minuut deze staan standard op 32 seconden. Dit zal bij elke aankoop gedeeld worden door 2
        en dit blijft zo gedurende 4 minuten maar zal na deze tijd weer verdubbelen.</string>
    <string name="HowToOffensiveEasyKill">powerUpOffensiveEasyKill</string>
    <string name="HowToOffensiveEasyKillText"> Als je deze power up koopt zal je volgende kill move
        30 keer een knop indrukken worden. Dit is de gemakkelijkste kill move van het spel!
    </string>
    <string name="HowToDefensiveStopSignal">powerUpDefensiveStopSignal</string>
    <string name="HowToDefensiveStopSignalText">Dit zal de update van je postitie voor de personen
        die op je jagen stoppen gedurende 2 minuten. Dit geeft de kans om je jager te ontlopen.
    </string>
    <string name="HowToDefensiveSound">powerUpDefensiveSound</string>
    <string name="HowToDefensiveSoundText">Gederunde 2 minuten krijgt de jager geen positie van je
        door maar hoort hij je enkel.</string>
    <string name="HowToDefensivePursuer">powerUpDefensivePursuer</string>
    <string name="HowToDefensivePursuerText">Dit geeft de loctaie van je achtervolger weer
        gedurende 4 min en wordt vernieuwd elke 5 seconden.</string>
    <string name="HowToDefensiveUpdateFrequency">powerUpDefensiveUpdateFrequency</string>
    <string name="HowToDefensiveUpdateFrequencyText">Dit vertraagt de hoeveelheid updates per minuut
        voor je achtervolger. Deze staan standard op 32 seconden en dit zal bij elke aankoop
        vermenegvuldigd worden door 2 en dit blijft zo gedurende 4 minuten
        maar zal na deze tijd weer halveren.</string>
    <string name="HowToDefensiveHardKill">powerUpDefensiveHardKill</string>
    <string name="HowToDefensiveHardKillText">Je achtervolger zal de snelheid killmove moeten
        uitvoeren. Dus kies je locatie wijs en dit zal hem niet lukken!</string>
    <string name="HowToGamePlayText">Ga op je fiets zitten en start de app.
        Je zal een target aangewezen krijgen en daarop zal je gaan jagen! Probeer bij hem in de
        buurt te geraken en voer de killmove uit! Als het lukt krijg je punten bij, zoniet zal je
        een nieuw target krijgen. Maar pas op het kan zijn dat er ondertussen iemand op jou jaagt
        als hij jou te pakken krijgt zal jij ook punten verliezen. Dus kijk goed rond voor mogelijk
        gevaar. </string>

</resources>
