<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <include layout="@layout/toolbar_low_in_rank"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="GamePlay"
            android:textSize="@dimen/text_size_title1"
            android:background="#ffff00"
            android:layout_marginTop="52dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToGamePlayText"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToPowerUps"
            android:textSize="@dimen/text_size_title1"
            android:background="#ffff00"
            android:layout_marginTop="52dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToOffensiveUpdateFrequency"
            android:textSize="@dimen/text_size_title2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToOffensiveUpdateFrequencyText"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToOffensiveEasyKill"
            android:textSize="@dimen/text_size_title2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToOffensiveEasyKillText"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveStopSignal"
            android:textSize="@dimen/text_size_title2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveStopSignalText"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveSound"
            android:textSize="@dimen/text_size_title2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveSoundText"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensivePursuer"
            android:textSize="@dimen/text_size_title2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensivePursuerText"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveUpdateFrequency"
            android:textSize="@dimen/text_size_title2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveUpdateFrequencyText"
            android:textSize="@dimen/text_size_information"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveHardKill"
            android:textSize="@dimen/text_size_title2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HowToDefensiveHardKillText"
            android:textSize="@dimen/text_size_information"/>

    </LinearLayout>
</ScrollView>